--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,500;0,700;1,400&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="main.css">
   
   <title>Frontend Mentor | Order summary card</title>
 
@@ -16,22 +22,33 @@
 </head>
 <body>
 
-  Order Summary
+  <div class="card">
+    <figure class="format-margin">
+      <img class="card__image" src="./images/illustration-hero.svg" alt="illustration of a girl listening to a song and dancing">
+    </figure>
+    <div class="card__main">
+      <h1 class="card__title">Order Summary</h1>
+      <p class="card__text">
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
+    </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
+    <div class="card__product">
+      <div class="card__price">
+        Annual Plan
+        $59.99/year
+      </div>
+    
+      <div class="card__change">Change</div>
+    </div>
+    <button class="card__button">Proceed to Payment</button>
+    <button class="card__button">Cancel Order</button>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Amodeus r.</a>.
   </div>
 </body>
 </html>
