fixed class declared 2 times

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     
     <div class="card__product">
-      <img class="card__icon" src="./images/icon-music.svg" alt="icon of icon-music" class="card__icon">
+      <img class="card__icon" src="./images/icon-music.svg" alt="icon of icon-music">
       
       <div class="card__price flex-column">
         <p  class="price__title">Annual Plan</p>
