Added Meta tags

--- a/index.html
+++ b/index.html
@@ -12,13 +12,24 @@
 
   <link rel="stylesheet" href="main.css">
   
-  <title>Frontend Mentor | Order summary card</title>
+  <!-- Primary Meta Tags -->
+  <title>Frontend Mentor | Order summary card solution</title>
+  <meta name="title" content="Frontend Mentor | Order summary card solution">
+  <meta name="description" content="A Frontend Mentor challenge | Solution by Amodeus R.">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://amodeusr.github.io/FM--order-summary-card/">
+  <meta property="og:title" content="Frontend Mentor | Order summary card solution">
+  <meta property="og:description" content="A Frontend Mentor challenge | Solution by Amodeus R.">
+  <meta property="og:image" content="https://amodeusr.github.io/FM--order-summary-card/page-models/meta-image.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://amodeusr.github.io/FM--order-summary-card/">
+  <meta property="twitter:title" content="Frontend Mentor | Order summary card solution">
+  <meta property="twitter:description" content="A Frontend Mentor challenge | Solution by Amodeus R.">
+  <meta property="twitter:image" content="https://amodeusr.github.io/FM--order-summary-card/page-models/meta-image.png">
 </head>
 <body>
 
